All ready for use

--- a/package.json
+++ b/package.json
@@ -10,8 +10,18 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "react": "16.9.0",
-    "react-native": "0.61.5"
+    "@eva-design/eva": "^1.2.0",
+    "@react-native-community/async-storage": "^1.6.2",
+    "@ui-kitten/eva-icons": "^4.2.0",
+    "react": "^16.9.0",
+    "react-native": "0.61.5",
+    "react-native-eva-icons": "^1.2.1",
+    "react-native-gesture-handler": "^1.5.2",
+    "react-native-svg": "^9.13.3",
+    "react-native-ui-kitten": "^4.2.0",
+    "react-navigation": "^4.0.10",
+    "react-navigation-stack": "^1.10.3",
+    "typescript": "^3.7.3"
   },
   "devDependencies": {
     "@babel/core": "^7.7.5",
