--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   "dependencies": {
     "@eva-design/eva": "^1.2.0",
     "@react-native-community/async-storage": "^1.6.2",
+    "@ui-kitten/components": "^4.3.2",
     "@ui-kitten/eva-icons": "^4.2.0",
-    "react": "^16.9.0",
+    "react": "^16.12.0",
     "react-native": "0.61.5",
     "react-native-eva-icons": "^1.2.1",
     "react-native-gesture-handler": "^1.5.2",
