--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-native": "0.61.5",
     "react-native-eva-icons": "^1.2.1",
     "react-native-gesture-handler": "^1.5.2",
+    "react-native-reanimated": "^1.4.0",
+    "react-native-router-flux": "^4.2.0-beta.1",
     "react-native-svg": "^9.13.3",
     "react-native-ui-kitten": "^4.2.0",
     "react-navigation": "^4.0.10",
