--- a/package.json
+++ b/package.json
@@ -18,23 +18,25 @@
     "react-native": "0.61.5",
     "react-native-eva-icons": "^1.2.1",
     "react-native-gesture-handler": "^1.5.2",
+    "react-native-image-picker": "^1.1.0",
     "react-native-reanimated": "^1.4.0",
     "react-native-router-flux": "^4.2.0-beta.1",
     "react-native-svg": "^9.13.3",
     "react-native-ui-kitten": "^4.2.0",
     "react-navigation": "^4.0.10",
-    "react-navigation-stack": "^1.10.3",
-    "typescript": "^3.7.3"
+    "react-navigation-stack": "^1.10.3"
   },
   "devDependencies": {
     "@babel/core": "^7.7.5",
     "@babel/runtime": "^7.7.6",
     "@react-native-community/eslint-config": "^0.0.5",
+    "@types/node": "^12.12.19",
     "babel-jest": "^24.9.0",
     "eslint": "^6.7.2",
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.57.0",
-    "react-test-renderer": "16.9.0"
+    "react-test-renderer": "16.9.0",
+    "typescript": "^3.7.3"
   },
   "jest": {
     "preset": "react-native"
