--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-jest": "^24.9.0",
     "eslint": "^6.7.2",
     "jest": "^24.9.0",
+    "mem": "^6.0.1",
     "metro-react-native-babel-preset": "^0.57.0",
     "react-test-renderer": "16.9.0",
     "typescript": "^3.7.3"
