--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/async-storage": "^1.6.2",
     "@ui-kitten/components": "^4.3.2",
     "@ui-kitten/eva-icons": "^4.2.0",
+    "crypto-js": "^3.1.9-1",
     "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-native": "0.61.5",
