--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-native-svg": "^9.13.6",
     "react-native-ui-kitten": "^4.2.0",
     "react-navigation": "^4.0.10",
-    "react-navigation-stack": "^1.10.3"
+    "react-navigation-stack": "^1.10.3",
+    "top-bar-nav": "^1.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.7.5",
